# NeuroMod

./: .gitignore  CMakeLists.txt  DESIGN_OVERVIEW.md  README.md
cmake/: BCNNeuroModelConfig.cmake.in
latexTemplate/: progress_report_template.tex
octSrc/: HVCRA.m
progReports/: progress_report_2026-01-14.tex
src/BCNNeuroModel/: CustomTypes.hpp  Exporto.cpp  Exporto.hpp  HVCI.cpp  HVCI.hpp  HVCRA.cpp  HVCRA.hpp  IFNeuron.hpp  OdeAble.hpp  Rk4.cpp  Rk4.hpp  main.cpp
src/PythonScripts/: SeeData.py
tests/: CMakeLists.txt  HVCRA_Test.cpp  RK4_Test.cpp
